# table-pdf-extractor

./: .gitignore  README.md  pyproject.toml
examples/: README.md  create_sample.py
table_extractor/: __init__.py  cli.py  extractor.py  utils.py
table_extractor/backends/: __init__.py  base.py  docling_backend.py  img2table_backend.py  ollama_backend.py
